jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int ECF_ConfigBarras_GetAltura(const INTPTR ecfHandle, int* value);

DllImport int ECF_ConfigBarras_SetAltura(const INTPTR ecfHandle, const int value);

DllImport int ECF_Consumidor_AtribuiConsumidor(const INTPTR ecfHandle, const PCHAR CPF_CNPJ, const PCHAR Nome, const PCHAR Endereco);

DllImport int ECF_Consumidor_GetAtribuido(const INTPTR ecfHandle);

DllImport int ECF_Consumidor_GetDocumento(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_GetEndereco(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_GetEnviado(const INTPTR ecfHandle);

DllImport int ECF_Consumidor_GetNome(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_SetEnviado(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_Consumidor_Zera(const INTPTR ecfHandle);